Implement - pos? for positive numbers - neg? for negative numbers - num? for is numeric value

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ im = { version = "15.0", features = ["proptest", "serde"] }
 ordered-float = "2.0"
 num-bigint = "0.4"
 num-traits = "0.2.14"
+lazy_static = "1.4.0"
