--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,11 +20,13 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Run tests
       run: cargo test --verbose
 
   fmt:
     runs-on: ubuntu-latest
     steps: 
+    - uses: actions/checkout@v2
     - name: FMT
       run: cargo fmt -- --check
